ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error: Unexpected token Some(Bang). Expected one of identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

error: TS1005
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

